--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,24 @@
 body{
     font-family: 'Inter', sans-serif;
 }
+
+
+
+.best-price-background{
+    background-color: #3F87F5;
+    border-radius: 25px;
+    position: relative;
+}
+.hot-price-legend{
+    background-color: #FF4E4E;
+    color: #fff;
+    border-radius: 25px;
+    display: inline;
+    padding: 2px 20px;
+    position: absolute;
+    top: -12px;
+    right: 30px;
+}
+.extra-margin-package{
+    margin-top: 45px;
+}
